Fix scrollbar on portfolio

--- a/southern-photography/src/App.css
+++ b/southern-photography/src/App.css
@@ -47,3 +47,28 @@ p {
 .active {
   border-bottom: 6px solid var(--primary);
 }
+#style-3::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+  border-radius: 25px;
+}
+
+#style-3::-webkit-scrollbar {
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
+#style-3::-webkit-scrollbar-thumb {
+  background: rgb(121, 105, 9);
+  background: linear-gradient(
+    0deg,
+    rgba(121, 105, 9, 1) 35%,
+    rgb(202, 181, 41) 100%
+  );
+  border-radius: 25px;
+}
+.scrollbar {
+  width: 100%;
+  overflow-y: scroll;
+  display: flex;
+}
